# bonk-rating-bot

./: .env-template  .gitignore  Cargo.toml  LICENSE  NOTICE.md  README.md  config-template.toml  room-template.toml
assets/: Bonk Playlists.user.js  Code Injector - Bonkio.user.js
dependencies/: CondensedInjector.js  CondensedInjector.min.js  sgrAPI.user.js  sgrInjector.user.js
doc/: install.md  reference.md
migrations/: 0001_init.down.sql  0001_init.sql  0001_init.up.sql  0002_leaderboard.down.sql  0002_leaderboard.sql  20250525190123_lb_settings_change.down.sql  20250525190123_lb_settings_change.up.sql  20250620191858_lb_stuff.down.sql  20250620191858_lb_stuff.up.sql
src/: bonk_bot.rs  discord_commands.rs  leaderboard.rs  main.rs  main2.rs  main3.rs  tests.rs
src/bonk_bot/: bonk_commands.rs  bonk_commands_old.rs  bonk_room.rs  events.rs  room_maker.rs
src/discord_commands/: admin_commands.rs
src/leaderboard/: openskill.rs
