[package]
name = "bonkmmr"
version = "0.1.0"
edition = "2021"
authors = ["StarCubey"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
fantoccini = "0.21.2"
reqwest = "0.12.9"
serde = "1.0.216"
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["model"] }
tokio = {version = "1.38.0", features = ["full"]}
toml = "0.8.19"
