[package]
name = "bonk-rating-bot"
version = "0.1.0"
edition = "2021"
authors = ["StarCubey"]
license = "MIT"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
fantoccini = "0.22.0"
rand = "0.9.0"
reqwest = "0.12.9"
serde = "1.0.216"
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["model"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "time"] }
time = "0.3.44"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.9.8"
